--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,21 @@
 </head>
 <body>
 
+<!-- Navigation bar -->
+<div class="navbar-fixed">
+  <nav style="background-color: rgb(110, 238, 132);">
+    <div class="nav-wrapper">
+      <a href="#!" class="brand-logo">멍냥몽땅</a>
+      <ul class="right hide-on-med-and-down">
+        <li><a href="sass.html">프로필</a></li>
+        <li><a href="badges.html">건강수첩</a></li>
+        <li><a href="badges.html">멍냥 스타일</a></li>
+        <li><a href="badges.html">로그인</a></li>
+      </ul>
+    </div>
+  </nav>
+</div>
+
 <div class="container-fluid">
   <%= yield %>
 </div>
