--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,7 +1,34 @@
-<div class="row">
-  <h1>Main#index</h1>
-  <p>Find me in app/views/main/index.html.erb</p>
+<div class="parallax-container">
+  <div class="parallax"><img src="https://s3-ap-northeast-1.amazonaws.com/swp1-idea/cat-179611_640.jpg"></div>
 </div>
 
+<div class="container center" style="margin-top: 8em; margin-bottom: 8em;">
+  <div class="row index_menu">
+    <a class="col s12 l3" href="#">
+      <i class="material-icons blue-text">favorite</i>
+      <h4 class="blue-text">멍냥 프로필</h4>
+      <p>내 반려동물의 정보를 관리하는 페이지 입니다</p>
+    </a>
+    <a class="col s12 l3" href="#">
+      <i class="material-icons red-text">chrome_reader_mode</i>
+      <h4 class="red-text">건강수첩</h4>
+      <p>반려동물의 건강기록을 관리하는 페이지 입니다</p>
+    </a>
+    <a class="col s12 l3" href="#">
+      <i class="material-icons green-text">local_florist</i>
+      <h4 class="green-text">멍냥 스타일</h4>
+      <p>귀여운 반려동물들의 요즘 스타일을 볼 수 있는 페이지 입니다</p>
+    </a>
+    <a class="col s12 l3" href="#">
+      <i class="material-icons yellow-text">mood</i>
+      <h4 class="yellow-text">서비스 소개</h4>
+      <p>멍냥스타일의 소개 페이지 입니다</p>
+    </a>
+  </div>
+</div>
 
-<h1>안녕하세요</h1>
+<script>
+$(document).ready(function(){
+  $('.parallax').parallax();
+});
+</script>
