--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
         <li><a href="/profile/index">프로필</a></li>
         <li><a href="badges.html">건강수첩</a></li>
         <li><a href="/gallery/index">멍냥스타일</a></li>
-        <li><a href=/main/introduction">멍냥몽땅이란?</a></li>
+        <li><a href="/main/introduction">멍냥몽땅이란?</a></li>
         <li><a href="badges.html">로그인</a></li>
       </ul>
     </div>
