--- a/app/views/profile/index.html.erb
+++ b/app/views/profile/index.html.erb
@@ -1,7 +1,5 @@
-<form >
+<%= form_tag "/profile/create_pet", multipart: true %>
    <img src="..." alt="..." class="img-circle">
-   
-   
    <%=current_user.pets.each do |item| %>
    <img src="<%= item.img.url %>">
    <%=item.name%>
@@ -14,7 +12,6 @@
     <input type="file" id="profile_picture" name="img">
     <p class="help-block">멍냥이 프로필 사진을 업로드해주세요~^^</p>
   </div>
-  
 
    <div class="form-group">
   <div class="form-group">
