--- a/app/views/healthnote/index.html.erb
+++ b/app/views/healthnote/index.html.erb
@@ -1,1 +1,40 @@
 <h2>건강 수첩</h2>
+
+<h4>멍냥 의료정보에 대해서 기록해주세요.</h4>
+
+  <table class="responsive-table bordered highlight">
+    <thead>
+      <tr>
+          <th data-field="id">번호</th>
+          <th data-field="name">내용</th>
+          <th data-field="date">날짜</th>
+          <th data-field="hospital">동물병원</th>
+          <th data-field="etc">비고</th>
+
+          
+      </tr>
+    </thead>
+
+    <tbody>
+      <% @healthnote.each do |item| %>
+        <tr>
+          <td><%= item.order %></td>
+          <td><%= item.content %></td>
+          <td><%= item.date %></td>
+          <td><%= item.hospital %></td>
+          <td><%= item.etc %></td>
+          <td></td>
+        </tr>  
+      <% end %>
+      <tr>
+        <td>1</td>
+        <td>심장사상충 예방접종</td>
+        <td>2015.11.11</td>
+        <td>와우 동물병원</td>
+        <td></td>
+      </tr>
+    </tbody>
+  </table>
+            
+            
+            
