--- a/app/views/profile/create.html.erb
+++ b/app/views/profile/create.html.erb
@@ -35,5 +35,5 @@
   </div>
  
 
-<button type="submit" class="btn btn-default">저장</button>
+<button a href="/profile/profile" type="submit" class="btn btn-default">저장</button>
     
