--- a/app/views/profile/create.html.erb
+++ b/app/views/profile/create.html.erb
@@ -1,4 +1,5 @@
 
+<%= form_tag "/profile/create_pet", multipart: true %>
    
    <div class="form-group">
     <label for="profile_picture">프로필 사진 업로드</label>
@@ -34,6 +35,8 @@
     <textarea class="form-control" name="about" rows="5"></textarea>
   </div>
  
+<a href="/profile/profile">
+<button type="submit" class="btn btn-default">저장</button>
+</a>
 
-<button a href="/profile/profile" type="submit" class="btn btn-default">저장</button>
-    
+</form>
