--- a/app/views/profile/index.html.erb
+++ b/app/views/profile/index.html.erb
@@ -1,24 +1,3 @@
-<% unless current_user.pets.nil?  %>
-    <div>
-    <h1 class="center-align">앗! 아직 작성된 멍냥프로필이 없네요</h1><br>
-    </div>
-    <div>
-    <h1 class="center-align">사랑스런 당신의 멍냥 프로필을 작성해주세요.</h1><br>
-    </div>
-    <div>
-    <a href="/profile/create">
-    <button class="center-align">작성하러가기</button>
-    </a>  
-    </div>
-<% else %>
-
-   <% current_user.pets.each do |item| %>
-   <img src="<%= item.img.url %>">
-   <h5>이름: <%=item.name%></h5><br>
-   <h5>성별: <%=item.gender%></h5><br>
-   <h5>나이: <%=item.age%></h5><br>
-   <h5>소개 :<%=item.about%></h5><br>
-   <% end %>
-   
-<% end %>
-
+<h1 class="center-align">앗! 아직 작성된 멍냥프로필이 없네요</h1><br>
+<h1 class="center-align">사랑스런 당신의 멍냥 프로필을 작성해주세요.</h1><br>
+<a href="/profile/create"><button class="center-align">작성하러가기</button></a>
