--- a/app/views/profile/edit.html.erb
+++ b/app/views/profile/edit.html.erb
@@ -1,17 +1,8 @@
-<h1 class="center-align">앗! 아직 작성된 멍냥프로필이 없네요</h1><br>
-<h1 class="center-align">사랑스런 당신의 멍냥 프로필을 작성해주세요.</h1><br>
-<a href="/profile/create"><button class="center-align">작성하러가기</button></a>
-<%= form_tag "/profile/create_pet", multipart: true %>
-  <img src="..." alt="..." class="img-circle">
-  <% current_user.pets.each do |item| %>
-  <img src="<%= item.img.url %>">
-  <%=item.name%>
-  <%=item.gender%>
-  <%=item.age%>
-  <%=item.about%>
-  <% end %>
-   
-  <div class="form-group">
+<h1>~나의 멍냥 정보 수정하기~</h1>
+
+<form action="/profile/update">
+    <input type="hidden" name="id" value="<%=@pet.id%>">
+    <div class="form-group">
     <label for="profile_picture">프로필 사진 업로드</label>
     <input type="file" id="profile_picture" name="img">
     <p class="help-block">멍냥이 프로필 사진을 업로드해주세요~^^</p>
@@ -20,7 +11,7 @@
    <div class="form-group">
   <div class="form-group">
     <label for="exampleInputName">이름</label>
-    <input type="text" class="form-control" id="exampleInputName" name="name" placeholder="ex. 딩딩이">
+    <input type="text" class="form-control" id="exampleInputName" name="name" placeholder="ex. 딩딩이" value="<%=@pet.name%>">
   </div>
 
   <div class="form-group">
@@ -37,14 +28,16 @@
   
   <div class="form-group">
     <label for="exampleInputage">나이</label>
-    <input type="text" class="form-control" id="exampleInputage" name="age" placeholder="ex. 3살, 6개월">
+    <input type="text" class="form-control" id="exampleInputage" name="age" placeholder="ex. 3살, 6개월" value="<%=@pet.age%>">
   </div>
   
   <div class="form-group">
     <label for="introduction">멍냥소개</label>
-    <textarea class="form-control" name="about" rows="5"></textarea>
+    <textarea class="form-control" name="about" rows="5" ><%=@pet.about%></textarea>
   </div>
   
   <button type="submit" class="btn btn-default">저장</button>
-
+    
+    
+    <input type="submit">
 </form>
