--- a/app/views/profile/pet_list.html.erb
+++ b/app/views/profile/pet_list.html.erb
@@ -4,7 +4,7 @@
 <h5>성별: <%=item.gender%></h5><br>
 <h5>나이: <%=item.age%></h5><br>
 <h5>소개 :<%=item.about%></h5><br>
-<button>수정하기</button>
+<a href="/profile/edit/<%= item.id %>"><button>수정하기</button></a>
 <% end %>
 
 <a href="/profile/create"><button>나의 멍냥 추가하기</button></a>
