--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -18,6 +18,7 @@
         <td><%= post.name %></td>
         <td><%= post.title %></td>
         <td><%= post.content %></td>
+        <td><img style="height:100px" src="<%= post.img %>"></td>
         <td><%= link_to 'Show', post %></td>
         <td><%= link_to 'Edit', edit_post_path(post) %></td>
         <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
