--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -14,6 +14,12 @@
   <strong>Content:</strong>
   <%= @post.content %>
 </p>
+<p>
+  <strong>Image:</strong>
+  <div class="style-post">
+    <img class='style-image' src="<%= @post.img %>">
+  </div>
+</p>
 
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
