index nice arrow

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -34,3 +34,13 @@
   padding: 2em;
   border-radius: 1em;
 }
+
+.arrow-down {
+  margin: auto;
+	width: 0; 
+	height: 0; 
+	border-left: 30px solid transparent;
+	border-right: 30px solid transparent;
+	
+	border-top: 30px solid rgb(110, 238, 132);
+}
