--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -2,6 +2,8 @@
   <div class="parallax"><img src="https://s3-ap-northeast-1.amazonaws.com/swp1-idea/cat-179611_640.jpg"></div>
 </div>
 
+<a href="#bottom"><div class="arrow-down" style="margin-top: 3em;"></div></a>
+
 <div class="container center" style="margin-top: 8em; margin-bottom: 8em;">
   <div class="row index_menu">
     <a class="col s12 l3" href="/profile/index">
@@ -25,10 +27,28 @@
       <p>멍냥스타일의 소개 페이지 입니다</p>
     </a>
   </div>
+  <div id="bottom">
+  </div>
 </div>
+
 
 <script>
 $(document).ready(function(){
   $('.parallax').parallax();
+  
+  $(function() {
+    $('a[href*=#]:not([href=#])').click(function() {
+      if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') && location.hostname == this.hostname) {
+        var target = $(this.hash);
+        target = target.length ? target : $('[name=' + this.hash.slice(1) +']');
+        if (target.length) {
+          $('html,body').animate({
+            scrollTop: target.offset().top
+          }, 1500);
+          return false;
+        }
+      }
+    });
+  });
 });
 </script>
