--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -12,21 +12,22 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label :title %><br>
+    <%= f.label :제목 %><br>
     <%= f.text_field :title %>
   </div>
   <div class="field">
-    <%= f.label :content %><br>
+    <%= f.label :내용 %><br>
     <%= f.text_area :content %>
   </div>
   <div class="field">
-    <%= f.label :img %><br>
+    <%= f.label :사진첨부 %><br>
     <%= f.file_field :img %>
   </div>
+  <div class="field">
+    <%= f.label :게시자 %><br>
+    <%= f.text_field :name %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
