--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,13 +1,14 @@
 <p id="notice"><%= notice %></p>
 
-<h1>게시물 목록</h1>
-
+<h3>Photo list<hr><%= link_to '등록하기', new_post_path %></h3>
+<hr>
 <table>
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Title</th>
-      <th>Content</th>
+      <th>제목</th>
+      <th>내용</th>
+      <th>사진</th>
+      <th>게시자</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -15,13 +16,15 @@
   <tbody>
     <% @posts.each do |post| %>
       <tr>
-        <td><%= post.name %></td>
+        
         <td><%= post.title %></td>
         <td><%= post.content %></td>
         <td><img style="height:100px" src="<%= post.img %>"></td>
-        <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= post.name %></td>
+      
+        <td><%= link_to '내용 보기', post %></td>
+        <td><%= link_to '수정', edit_post_path(post) %></td>
+        <td><%= link_to '삭제', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -29,4 +32,4 @@
 
 <br>
 
-<%= link_to '새로 등록하기', new_post_path %>
+
