--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,5 @@
-<h1>새로 등록하기</h1>
+<h1>Photo Upload</h1>
 
 <%= render 'form' %>
 
-<%= link_to '뒤로가기', posts_path %>
+<%= link_to '목록으로', posts_path %>
