--- a/app/views/profile/index.html.erb
+++ b/app/views/profile/index.html.erb
@@ -1,3 +1,15 @@
+<style>
+html { 
+  background: url(http://cfile204.uf.daum.net/image/2041923850AC4352343073) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+</style>
+<div>
 <h1 class="center-align">앗! 아직 작성된 멍냥프로필이 없네요</h1><br>
 <h1 class="center-align">사랑스런 당신의 멍냥 프로필을 작성해주세요.</h1><br>
+</div>
+
 <a href="/profile/create"><button class="center-align">작성하러가기</button></a>
