--- a/app/views/profile/pet_list.html.erb
+++ b/app/views/profile/pet_list.html.erb
@@ -5,8 +5,7 @@
 <h5>나이: <%=item.age%></h5><br>
 <h5>소개 :<%=item.about%></h5><br>
 <a href="/profile/edit/<%= item.id %>"><button>수정하기</button></a>
-<%= link_to '지우기','/profile/destroy',data: {confirm: "지우시겠습니까?"} %>
+<%= link_to '지우기','/profile/destroy/'+item.id.to_s, data: {confirm: "지우시겠습니까?"} %>
 
 <% end %>
-
 <a href="/profile/create"><button>나의 멍냥 추가하기</button></a>
