--- a/app/views/healthnote/edit.html.erb
+++ b/app/views/healthnote/edit.html.erb
@@ -1,4 +1,4 @@
-<h3>멍냥 진료 및 치료 기록을 입력해주세요.</h3>
+<h3>기록 편집</h3>
 
   <div class="row">
     <form action="/healthnote/create" class="col s12">
@@ -30,6 +30,8 @@
          </div>
         </div>
       </div>
-      <button class="btn waves-effect waves-light" type="submit" name="action">저장<i class="material-icons left">pets</i></button>
+      <button class="btn waves-effect waves-light" type="submit" name="action">저장<i class="material-icons left">pets</i></button>      
+            
     </form>
+    <a class="btn waves-effect waves-light" href="/healthnote/index" name="action">돌아가기<i class="material-icons left">pets</i></a>
   </div>
