--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,10 @@
 <p id="notice"><%= notice %></p>
 
-<h3>Photo list<hr><%= link_to '등록하기', new_post_path %></h3>
-<hr>
+<h3 class="center-align">Photo list</h3>
+<br>
+<h4 class="right-align"><%= link_to '등록하기', new_post_path %></h4>
+<br>
+
 <table>
   <thead>
     <tr>
