--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,6 +1,7 @@
-<h1>수정하기</h1>
+<h3 class="center-align">수정하기</h3>
+<br>
 
 <%= render 'form' %>
 
-<%= link_to '게시물 보기', @post %> |
+<%= link_to '내용 보기', @post %> |
 <%= link_to '목록으로', posts_path %>
