--- a/app/views/healthnote/index.html.erb
+++ b/app/views/healthnote/index.html.erb
@@ -40,3 +40,49 @@
 <br></br>
 
 <a class="waves-effect waves-light btn" href="/healthnote/input"><i class="material-icons left">pets</i>추가</a>
+
+<!-- 그래프 폐기
+<div class="row">
+  <div class="col s12 l10 offset-l1">
+    <canvas id="myChart" style="width: 100%;"></canvas>
+  </div>
+</div>
+
+<script>
+$( document ).ready(function(){
+  // Get the context of the canvas element we want to select
+  var ctx = $("#myChart").get(0).getContext("2d");
+  // This will get the first returned node in the jQuery collection.
+  var myLineChart = new Chart(ctx);
+  
+  var data = {
+    labels: ["January", "February", "March", "April", "May", "June", "July"],
+    datasets: [
+      {
+        label: "My First dataset",
+        fillColor: "rgba(220,220,220,0.2)",
+        strokeColor: "rgba(220,220,220,1)",
+        pointColor: "rgba(220,220,220,1)",
+        pointStrokeColor: "#fff",
+        pointHighlightFill: "#fff",
+        pointHighlightStroke: "rgba(220,220,220,1)",
+        data: [65, 59, 80, 81, 56, 55, 40]
+      },
+      {
+        label: "My Second dataset",
+        fillColor: "rgba(151,187,205,0.2)",
+        strokeColor: "rgba(151,187,205,1)",
+        pointColor: "rgba(151,187,205,1)",
+        pointStrokeColor: "#fff",
+        pointHighlightFill: "#fff",
+        pointHighlightStroke: "rgba(151,187,205,1)",
+        data: [28, 48, 40, 19, 86, 27, 90]
+      }
+    ]
+  };
+  
+  var options;
+  new Chart(ctx).Line(data, options);
+});
+</script>
+-->
