--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -5,7 +5,7 @@
 <a href="#bottom"><div class="arrow-down" style="margin-top: 3em;"></div></a>
 
 <div class="container center" style="margin-top: 8em; margin-bottom: 8em;">
-  <div class="row index_menu">
+  <div id="bottom" class="row index_menu">
     <a class="col s12 l3" href="/profile/index">
       <i class="material-icons blue-text">favorite</i>
       <h4 class="blue-text">멍냥 프로필</h4>
@@ -27,8 +27,6 @@
       <p>멍냥스타일의 소개 페이지 입니다</p>
     </a>
   </div>
-  <div id="bottom">
-  </div>
 </div>
 
 
@@ -44,7 +42,7 @@ $(document).ready(function(){
         if (target.length) {
           $('html,body').animate({
             scrollTop: target.offset().top
-          }, 1500);
+          }, 1100);
           return false;
         }
       }
