--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -3,5 +3,9 @@
 
 <%= render 'form' %>
 
-<%= link_to '내용 보기', @post %> |
-<%= link_to '목록으로', posts_path %>
+<br>
+
+<div class="right-align">
+<a class="waves-effect waves-light btn"<%= link_to '내용 보기', @post %>
+<a class="waves-effect waves-light btn"<%= link_to '목록으로', posts_path %>
+</div>
