--- a/app/views/main/introduction.html.erb
+++ b/app/views/main/introduction.html.erb
@@ -1,17 +1,17 @@
 <div class="container" style="margin-top: 4em;">
-  <h3>멍냥몽땅이란?</h3>
+  <h3 class="center-align">멍냥몽땅이란?</h3>
   <div class="row">
     <div class="col s10 offset-s1">
       <p class="bg-success flow-text">
-        멍냥몽땅은 현재 동물수첩 시스템의 문제를 해결하여 <mark>반려동물의 케어</mark>를 좀 더 편리하게 하고자, 
-        반려동물의 <strong>정보</strong>와 <strong>체중/신장 변화</strong>, 그리고 <strong>순간의 사진들을 기록할 수 있는 멍냥프로필</strong>,  
-        의료기록을 기록해두고 필요할 때 볼 수 있는 <strong>건강수첩</strong>, 미용을 할 때 <strong>최신 스타일을 알 수 있는 멍냥스타일</strong>로 구성되어 
+        멍냥몽땅은 현재 동물수첩 시스템의 문제를 해결하여 <highlight>반려동물의 케어</highlight>를 좀 더 편리하게 하고자, 
+        반려동물의 정보와 체중/신장 변화, 그리고 순간의 사진들을 기록할 수 있는 멍냥프로필,  
+        의료기록을 기록해두고 필요할 때 볼 수 있는 건강수첩, 미용을 할 때 최신 스타일을 알 수 있는 멍냥스타일로 구성되어 
         2015년 11월 서울대학교 '벤처창업 웹 프로그래밍1' 수업에서 다양한 전공의 학생들이 모여서 만들어 낸 웹 서비스 입니다.
       </p>
     </div>
   </div>
 
-  <h3>만든 사람들</h3>
+  <h3 class="center-align">만든 사람들</h3>
   <div class="row">
     <% ["배윤","정유철","이현","이예린"].each do |item| %>
       <div class="col s3"><div class="card-panel teal lighten-2"><div class="card-panel hoverable center"><%= item %></div></div></div>
