--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -15,20 +15,33 @@
     <%= f.label :제목 %><br>
     <%= f.text_field :title %>
   </div>
+  
+  <br>
+  
   <div class="field">
     <%= f.label :내용 %><br>
     <%= f.text_area :content %>
   </div>
-  <div class="field">
+  
+  <br>
+  
+  <div class="field, center-align">
     <%= f.label :사진첨부 %><br>
     <%= f.file_field :img %>
   </div>
+  
+  
+  <br>
+  
   <div class="field">
     <%= f.label :게시자 %><br>
     <%= f.text_field :name %>
   </div>
 
-  <div class="actions">
-    <%= f.submit %>
+  <div class="center align">
+    <button class="btn waves-effect waves-light" type="submit" name="action">등록하기
+     <i class="material-icons right">send</i>
+    </button>
   </div>
+  
 <% end %>
