--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,7 +5,7 @@
 <h4 class="right-align"><%= link_to '등록하기', new_post_path %></h4>
 <br>
 
-<table>
+<table class="centered, striped">
   <thead>
     <tr>
       <th>제목</th>
@@ -22,7 +22,7 @@
         
         <td><%= post.title %></td>
         <td><%= post.content %></td>
-        <td><img style="height:100px" src="<%= post.img %>"></td>
+        <td><img class="responsive-img" style="height:100px" src="<%= post.img %>"></td>
         <td><%= post.name %></td>
       
         <td><%= link_to '내용 보기', post %></td>
