--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -21,5 +21,5 @@
   <%= @post.name %>
 </p>
 
-<%= link_to '수정하기', edit_post_path(@post) %> |
+<%= link_to '수정', edit_post_path(@post) %> |
 <%= link_to '목록으로', posts_path %>
