--- a/app/views/profile/index.html.erb
+++ b/app/views/profile/index.html.erb
@@ -14,7 +14,7 @@ html {
 </div>
 
 <div class="center-align">
-<a href="/profile/create" class="waves-effect waves-light btn-large" style="background-color:rgb(211, 98, 103)">
+<a href="/profile/create" class="waves-effect waves-light btn-large " style="background-color:rgb(211, 98, 103);">
   작성하러 가기</a>
 </div>
  
