--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,3 +1,6 @@
+<div class="row">
+<div class="col s6 offset-s3">
+
 <%= form_for(@post) do |f| %>
   <% if @post.errors.any? %>
     <div id="error_explanation">
@@ -25,10 +28,18 @@
   
   <br>
   
-  <div class="field, center-align">
-    <%= f.label :사진첨부 %><br>
-    <%= f.file_field :img %>
-  </div>
+  
+  <form action="#">
+    <div class="file-field input-field">
+      <div class="btn">
+        <span>Photo</span>
+        <input type="file" multiple>
+      </div>
+      <div class="file-path-wrapper">
+        <input class="file-path validate" type="text" placeholder="Upload one or more files">
+      </div>
+    </div>
+  </form>
   
   
   <br>
@@ -45,3 +56,5 @@
   </div>
   
 <% end %>
+
+</div></div>
