--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,11 +1,12 @@
 <h3 class="center-align">수정하기</h3>
 <br>
 
-<%= render 'form' %>
+<%= render 'form'%>
+
 
 <br>
 
-<div class="right-align">
+<div class="center-align">
 <a class="waves-effect waves-light btn"<%= link_to '내용 보기', @post %>
 <a class="waves-effect waves-light btn"<%= link_to '목록으로', posts_path %>
 </div>
