--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,6 @@
+<div class="row">
+<div class="col s10 offset-s1"
+
 <p id="notice"><%= notice %></p>
 
 <h3 class="center-align">Photo list</h3>
@@ -35,4 +38,4 @@
 
 <br>
 
-
+</div></div>
