--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,6 +1,10 @@
 <h3 class="center-align">Photo Upload</h3>
-<hr>
+<br>
 
 <%= render 'form' %>
 
-<%= link_to '목록으로', posts_path %>
+
+
+<div class="center-align">
+<a class="waves-effect waves-light btn"<%= link_to '목록으로', posts_path %>
+</div>
