--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,6 @@
 <p id="notice"><%= notice %></p>
 
+<div class="center-align">
 <p>
   <strong>제목:</strong>
   <%= @post.title %>
@@ -10,7 +11,6 @@
   <%= @post.content %>
 </p>
 <p>
-  <strong>사진:</strong>
   <div class="style-post">
     <img class='style-image' src="<%= @post.img %>">
   </div>
@@ -20,6 +20,10 @@
   <strong>게시자:</strong>
   <%= @post.name %>
 </p>
+</div>
 
-<%= link_to '수정', edit_post_path(@post) %> |
-<%= link_to '목록으로', posts_path %>
+
+<div class="center-align">
+<a class="waves-effect waves-light btn"<%= link_to '수정', edit_post_path(@post) %> 
+<a class="waves-effect waves-light btn"<%= link_to '목록으로', posts_path %>
+</div>
