--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,15 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.1/js/materialize.min.js"></script>
   
   <%= csrf_meta_tags %>
+  
+  <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/minigrid/2.0.0/minigrid.min.js"></script>
+  
+  <style type="text/css">
+
+  body { font-family:'나눔고딕'; }
+
+  </style>
+
 </head>
 <body>
 
