--- a/app/views/profile/create.html.erb
+++ b/app/views/profile/create.html.erb
@@ -1,5 +1,8 @@
 <%= form_tag "/profile/create_pet", multipart: true %>
-   
+  
+  <h4 class="center-align">멍냥이 프로필을 작성해 주세요.</h4>
+  
+  
    <div class="form-group">
     <label for="profile_picture">프로필 사진 업로드</label>
     <input type="file" id="profile_picture" name="img">
