--- a/app/views/profile/index.html.erb
+++ b/app/views/profile/index.html.erb
@@ -9,7 +9,7 @@ html {
 </style>
 
 <div class>
-  <h3 class="center-align white-text bold" style="margin-top: 4.5em; background-color: rgba( 255, 231, 234, 0.3 )">
+  <h3 class="center-align white-text " style="margin-top: 4.5em; background-color: rgba( 255, 231, 234, 0.3 )">
     앗! 아직 작성된 멍냥프로필이 없네요.<br>사랑스런 당신의 멍냥 프로필을 작성해주세요.</h5>
 </div>
 
