--- a/app/views/healthnote/index.html.erb
+++ b/app/views/healthnote/index.html.erb
@@ -30,13 +30,19 @@
         <td>심장사상충 예방접종</td>
         <td>2015.11.11</td>
         <td>와우 동물병원</td>
-        <td></td>
+        <td>아파요</td>
         <td></td>        
-      </tr>
+        <td></td>        
+        </tr>
     </tbody>
   </table>
             
  
 <br></br>
 
+<form action='/healthnote/index'>
+    <input type="text" name="irum" placeholder="검색"><a class="btn-flat">검색</a>
+</form>
+
 <a class="waves-effect waves-light btn" href="/healthnote/input"><i class="material-icons left">pets</i>추가</a>
+
