--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -18,18 +18,11 @@
     <%= f.label :제목 %><br>
     <%= f.text_field :title %>
   </div>
-  
-  <br>
-  
   <div class="field">
     <%= f.label :내용 %><br>
     <%= f.text_area :content %>
   </div>
-  
-  <br>
-  
-  
-  <form action="#">
+
     <div class="file-field input-field">
       <div class="btn">
         <span>Photo</span>
@@ -39,22 +32,19 @@
         <input class="file-path validate" type="text" placeholder="Upload one or more files">
       </div>
     </div>
-  </form>
   
   
-  <br>
   
   <div class="field">
     <%= f.label :게시자 %><br>
     <%= f.text_field :name %>
   </div>
 
-  <div class="center align">
-    <button class="btn waves-effect waves-light" type="submit" name="action">등록하기
-     <i class="material-icons right">send</i>
-    </button>
+<div class="center-align">
+  <button class="btn waves-effect waves-light" type="submit" name="action">저장하기
+    <i class="material-icons right">send</i>
+  </button>
   </div>
   
 <% end %>
-
 </div></div>
