--- a/app/views/main/introduction.html.erb
+++ b/app/views/main/introduction.html.erb
@@ -14,7 +14,7 @@
   <h3 class="center-align">만든 사람들</h3>
   <div class="row">
     <% ["배윤","정유철","이현","이예린"].each do |item| %>
-      <div class="col s3"><div class="card-panel teal lighten-2"><div class="card-panel hoverable center"><%= item %></div></div></div>
+      <div class="col s3"><div class="card-panel"><div class="card-panel background-color: white hoverable center"><%= item %></div></div></div>
     <% end %>
   </div>
 </div>
