--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,12 +13,15 @@
  *= require_tree .
  *= require_self
  */
+ 
+body { font-family:'나눔고딕'; } 
+
 .index_menu i {
   font-size: 10rem;
 }
 
 .index_menu a {  
-  color:#000;
+  color: #000;
   -webkit-transition: background 0.4s linear;
   -moz-transition: background 0.4s linear;
   -ms-transition: background 0.4s linear;
@@ -26,11 +29,11 @@
   transition: background 0.4s linear;
 }
 .index_menu a:hover {
-  background-color: #d1d1d1;
+  background-color: rgba(238, 110, 115, 0.3);
 }
 
 .devise_block {
-  background-color: rgba(76, 175, 102, 0.29);
+  background-color: rgba(246, 162, 173, 0.3);
   padding: 2em;
   border-radius: 1em;
 }
@@ -42,6 +45,25 @@
 	border-left: 30px solid transparent;
 	border-right: 30px solid transparent;
 	
-	border-top: 30px solid rgb(244, 196, 202);
+	border-top: 30px solid rgb(238, 110, 115);
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    text-transform: uppercase;
+    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-weight: 700;
+    color: rgb(238,110,115);
+}
+
+.btn {
+    background-color: rgb(239, 154, 154);
+}
+
+.card-panel{
+  background-color: rgb(239, 154, 154);
+}
