--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -39,13 +39,20 @@
         <button class="btn waves-effect waves-light" type="submit" name="commit" value="Update" >회원정보 변경</button>
       </div>
     <% end %>
-    
-    <h3>회원 탈퇴</h3>
-    
-    <p>정말입니까? <%= button_to "계정 삭제", registration_path(resource_name), data: { confirm: "삭제된 계정은 복구될 수 없습니다" }, method: :delete, class: "btn" %></p>
-    
-    <div class="center" style="margin-top: 1em;">
-      <%= link_to "뒤로 가기", :back %>
-    </div>
   </div>
+</div>  
+    
+    
+<div class="container">    
+  <h2>회원 탈퇴</h2>
+  
+    <div class="devise_block actions center">
+      <h5>정말루요? ㅜ ㅜ</h5> 
+        <div style="margin-top: 1em;">
+        <%= button_to "네", registration_path(resource_name), data: { confirm: "삭제된 계정은 복구될 수 없습니다" }, method: :delete, class: "btn" %>
+        </div>
+        <div style="margin-top: 1em;">
+        <%= link_to "아니오", :back, class: "btn" %>
+        </div>
+    </div>    
 </div>
