--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -7,6 +7,6 @@
 <br>
 
 <div class="center-align">
-<a class="waves-effect waves-light btn"<%= link_to '내용 보기', @post %>
-<a class="waves-effect waves-light btn"<%= link_to '목록으로', posts_path %>
+<a class="waves-effect waves-teal btn-flat"<%= link_to '내용보기', @post %> |
+<a class="waves-effect waves-teal btn-flat"<%= link_to '목록으로', posts_path %>
 </div>
