--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -4,5 +4,5 @@
 <%= render 'form' %>
 
 <div class="center-align">
-<a class="waves-effect waves-light btn"<%= link_to '목록으로', posts_path %>
+<a class="waves-effect waves-teal btn-flat"<%= link_to '목록으로', posts_path %>
 </div>
