--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,5 +1,5 @@
 <div class="parallax-container">
-  <div class="parallax"><img src="https://s3-ap-northeast-1.amazonaws.com/swp1-idea/cat-179611_640.jpg"></div>
+  <div class="parallax"><img src="https://pixabay.com/static/uploads/photo/2010/12/13/10/20/beagle-puppy-2681_960_720.jpg"></div>
 </div>
 
 <a href="#bottom"><div class="arrow-down" style="margin-top: 3em;"></div></a>
