--- a/app/views/profile/create.html.erb
+++ b/app/views/profile/create.html.erb
@@ -3,15 +3,16 @@
 <div class="container">
   <h2>멍냥이 프로필을 작성해 주세요.</h2> 
   
+ 
   <div class="devise_block">
-    <div class="preview">
+    <div class="field center-align">
       <input type="file" id="profile_picture" name="img" onchange="previewFile()"><br>
-      <img src="" height="200" alt="Image preview...">
+      <img src="http://cliparts.co/cliparts/6cy/Xjg/6cyXjgM9i.svg" height="200" alt="" >
     </div>
     
-    <div class="field">
+    <div class="field center-align">
       <label for="profile_picture">프로필 사진 업로드</label>
-      <p class="help-block">멍냥이 프로필 사진을 업로드해주세요~^^</p>
+      <p class="help-block center-align">멍냥이 프로필 사진을 업로드해주세요~^^</p>
     </div>
 
     <div class="field">
@@ -32,8 +33,8 @@
     </div>
   
     <div class="field">
-      <label for="exampleInputage">나이</label>
-      <input type="text" class="form-control" id="exampleInputage" name="age" placeholder="ex. 3살, 6개월">
+      <label for="exampleInputage">생일</label>
+      <input type="date" class="datepicker" id="exampleInputbirth" name="birth">
     </div>
   
     <div class="field">
@@ -62,4 +63,10 @@ function previewFile() {
     preview.src = "";
   }
 }
+
+$('.datepicker').pickadate({
+  selectMonths: true, // Creates a dropdown to control month
+  selectYears: 15 // Creates a dropdown of 15 years to control year
+  });
+       
 </script>
