--- a/app/views/healthnote/note_detail.erb
+++ b/app/views/healthnote/note_detail.erb
@@ -28,4 +28,4 @@
     <input type="text" name="irum" placeholder="검색"><a class="btn-flat">검색</a>
 </form>
 
-<a class="waves-effect waves-light btn" href="/healthnote/input"><i class="material-icons left">pets</i>추가</a>
+<a class="waves-effect waves-light btn" href="/healthnote/input/<%= params[:id] %>"><i class="material-icons left">pets</i>추가</a>
