--- a/app/views/profile/edit.html.erb
+++ b/app/views/profile/edit.html.erb
@@ -31,7 +31,7 @@
   
   <div class="field">
     <label for="exampleInputage">생일</label>
-    <%=Time.parse(@pet.birth).strftime("%Y, %M, %d")%>
+    <%=Time.parse(@pet.birth).strftime("%Y, %m, %d")%>
     <input type="date" class="datepicker" id="exampleInputbirth" name="birth">
   </div>
   
