--- a/app/views/profile/pet_list.html.erb
+++ b/app/views/profile/pet_list.html.erb
@@ -17,7 +17,7 @@
     
         <div class="field">
             <label>생일</label>
-            <%=Time.parse(item.birth).strftime("%Y, %M, %d")%>
+            <%=Time.parse(item.birth).strftime("%Y, %m, %d")%>
         </div>
 
         <div class="field">
