--- a/app/views/healthnote/input.html.erb
+++ b/app/views/healthnote/input.html.erb
@@ -5,17 +5,17 @@
     <div class="row">
       <div class="input-field col s12">
         <i class="material-icons prefix">pets</i>
-        <input id="icon_prefix" name="content" type="text" class="validate">
+        <input id="icon_prefix" name="content" type="text" class="validate" required>
         <label for="icon_prefix">진료내용</label>
       </div>
       <div class="input-field col s12">
         <i class="material-icons prefix">today</i>
-        <input id="icon_telephone" name="date" type="tel" class="validate">
+        <input id="icon_telephone" name="date" type="tel" class="validate" required>
         <label for="icon_telephone">날짜</label>
       </div>
       <div class="input-field col s12">
         <i class="material-icons prefix">local_hospital</i>
-        <input id="icon_telephone" name="hospital" type="tel" class="validate">
+        <input id="icon_telephone" name="hospital" type="tel" class="validate" required>
         <label for="icon_telephone">동물병원</label>
       </div>  
       <div class="input-field col s12">
