--- a/app/views/profile/index.html.erb
+++ b/app/views/profile/index.html.erb
@@ -1,6 +1,6 @@
 <style>
 html { 
-  background: url(http://cfile204.uf.daum.net/image/2041923850AC4352343073) no-repeat center center fixed; 
+  background: url(/images/cat.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -8,13 +8,12 @@ html {
 }
 </style>
 
-<div class>
-  <h3 class="center-align white-text " style="margin-top: 4.5em; background-color: rgba( 255, 231, 234, 0.3 )">
-    앗! 아직 작성된 멍냥프로필이 없네요.<br>사랑스런 당신의 멍냥 프로필을 작성해주세요.</h5>
-</div>
+<h3 class="center-align white-text " style="margin-top: 4.5em; background-color: rgba( 255, 231, 234, 0.3 )">
+  앗! 아직 작성된 멍냥프로필이 없네요.<br>사랑스런 당신의 멍냥 프로필을 작성해주세요.
+</h5>
 
 <div class="center-align">
-<a href="/profile/create" class="btn">작성하러 가기</a>
+<a href="/profile/create" class="btn" style="margin-bottom: 10em;">작성하러 가기</a>
 </div>
  
 
