--- a/app/views/gallery/index.html.erb
+++ b/app/views/gallery/index.html.erb
@@ -1,28 +1,27 @@
 <div class="row">
-<div class="col s10 offset-s1">
-
-<h3 class="center-align">멍냥스타일</h3>
-<hr>
-<h4 class="right-align"><%= link_to "등록/관리하기", posts_path %></h4>
-<br>
-
-<div class="grid">
-<div class="grid-item">
-
- <% Post.take(10).each do |p| %>
-    <div class="style-post">
-        <img class='style-image' src="<%= p.img %>">
+  <div class="col s10 offset-s1">
+    <h3 class="center-align">멍냥스타일</h3>
+    <hr>
+    <h4 class="right-align"><%= link_to "내 사진 등록/관리하기", posts_path %></h4>
+    <br>
+  
+    <div class="grid">
+      <% Post.all.each do |item| %>
+        <div class="style-post grid-item">
+          <img class='style-image' src="<%= item.img %>">
+        </div>
+      <% end %>
     </div>
-<% end %>
 
-</div></div>
-
-</div></div>
+  </div>
+</div>
 
 <script>
-    minigrid({
-  container: '.grid',
-  item: '.grid-item',
-  gutter: 6
+$(document).ready(function(){
+  minigrid({
+    container: '.grid',
+    item: '.grid-item',
+    gutter: 6
+  });
 });
 </script>
